# portfolio

./: .lintstagedrc.json  README.md  docker-compose.build.yml  docker-compose.development.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  lerna.json  package-lock.json  package.json
.fleet/: settings.json
.github/workflows/: deploy-gh-page.yml  verify-pr.yml
.husky/: pre-commit  pre-push
.junie/: guidelines.md
docs/adr/: 20241203-cms-backend.md  20241203-tinacms-chosen-as-cms-backend-for-portfolio-site.md  20241210-astro-chosen-for-portfolio-site-frontend.md  20241210-ssg-frontend.md  20250123-shop-backend.md  20250123-stripe-chosen-for-shop-backend-with-pay-per-transaction-billing.md  20250212-ai-assistant-infrastructure-selection.md  20250212-cloudflare-chosen-for-ai-assistant-hosting.md  20250212-iac-system.md  20250215-ai-assistant-frontend.md  20250215-litelement-chosen-for-ai-assistant-chatroom-component.md  20250219-guidelines-for-web-component-generation.md  20250224-html-for-readability-and-latex-for-ats-friendly-resume-output.md  template.md
scripts/: dev.sh  setup.sh
scripts/ci/: build.sh  test.sh
systems/ai-assistant/: .gitignore  README.md  docker-compose.yml  (+4 more)
systems/ai-assistant/cli-py/: .env.dev  .gitignore  README.md  pdm.toml  pyproject.toml
systems/ai-assistant/cli-py/src/: application-form-filler.py  cord-intro-messages.py
systems/ai-assistant/cli-py/src/ai_assistant_cli/: application-form-filler.py  cord-intro-messages.py  upload-jd.py
systems/ai-assistant/cli-py/src/ai_assistant_cli/cloud/: object_storage.py
systems/ai-assistant/cli-py/src/ai_assistant_cli/mcp-servers/: __init__.py  cord.py  jd.py  portfolio.py
systems/ai-assistant/cli-py/src/ai_assistant_cli/utils/: read_lines.py
systems/ai-assistant/cli-py/src/lib/mcp-servers/: jd.py  portfolio.py
systems/ai-assistant/worker/: .gitignore  .pdm-python  Dockerfile  package-lock.json  package.json  pyproject.toml  wrangler.toml
systems/ai-assistant/worker/scripts/ci/: deploy.sh  setup.sh  test.sh
systems/ai-assistant/worker/scripts/dev/: deploy.sh  setup.sh  start.sh
systems/ai-assistant/worker/scripts/docker/: setup.sh  start.sh
systems/ai-assistant/worker/src/: test.py  worker.py
(+716 files in other folders)
